# python-project-52

./: .env.sample  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels_test_data.json  statuses_test_data.json  users.json  users_test_data.json
task_manager/label/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/fixtures/: labels.json
task_manager/label/migrations/: 0001_initial.py
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/fixtures/: statuses.json
task_manager/status/migrations/: 0001_initial.py
task_manager/task/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/fixtures/: tasks.json
task_manager/task/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_description_alter_task_executor_and_more.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/label/: create.html  delete.html  index.html  update.html
task_manager/templates/layouts/: base.html  form_base.html
task_manager/templates/pages/: index.html  index_status.html  index_task.html  index_user.html  login.html  page_task.html
task_manager/templates/status/: create.html  delete.html  index.html  update.html
task_manager/templates/task/: create.html  delete.html  index.html  page.html  update.html
task_manager/user/: forms.py  models.py  tests.py  urls.py  views.py
(+27 files in other folders)
