[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Anna Smertina <smr.anya@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
psycopg-binary = "^3.2.3"
dj-database-url = "^2.3.0"
psycopg = "^3.2.3"
django-bootstrap5 = "^24.3"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
django-filter = "^24.3"
rollbar = "^1.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
